<resources>
    <string name="login_time_out">登录信息失效，请重新登录</string>
    <string name="home">首页</string>
    <string name="news">发现</string>
    <string name="vip">VIP</string>
    <string name="international_vip">国际VIP</string>
    <string name="music">音乐</string>
    <string name="hot">热播</string>
    <string name="mine">我的</string>
    <string name="refresh_success">刷新完成</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="refresh_release">释放立即刷新</string>
    <string name="refresh_pulling">下拉可以刷新</string>
    <string name="refresh_secondary">释放进入二楼</string>
    <string name="refresh_update">上次更新 M-d HH:mm</string>
    <string name="load_tip">没有更多了哦~</string>
    <string name="load_release">释放立即加载</string>
    <string name="load_success">加载完成</string>
    <string name="load_failed">加载失败</string>
    <string name="load_pulling">上拉加载更多</string>
    <string name="upload_video">上传视频</string>
    <string name="offline_video">离线视频</string>
    <string name="release_dynamic">发布动态</string>
    <string name="sports">体育</string>
    <string name="recommendedForYou">为你推荐</string>
    <string name="following">正在追</string>
    <string name="advertisement">广告</string>
    <string name="category_guid">导航</string>
    <string name="more_type">更多%s</string>
    <string name="movieMore">更多精彩影片</string>
    <string name="teleplayMore">更多电视剧</string>
    <string name="varietyMore">更多综艺</string>
    <string name="comicMore">更多动漫</string>
    <string name="documentaryMore">更多纪录片</string>
    <string name="sportsMore">更多体育</string>
    <string name="change">换一换</string>
    <string name="edit">编辑</string>
    <string name="episode">剧集</string>
    <string name="short_video">小视频</string>
    <string name="pictures">相册</string>
    <string name="login_tip">登录后有新天地</string>
    <string name="record_sync_tip">同步多端播放记录</string>
    <string name="historic_records">历史记录</string>
    <string name="login_now">立即登录</string>
    <string name="sureDelete">确认删除</string>
    <string name="close">关闭</string>
    <string name="close_push">关闭通知</string>
    <string name="open_push">保持开启</string>
    <string name="resetEdit">重新编辑</string>
    <string name="delete_record">删除记录</string>
    <string name="deleteVideo">删除小视频</string>
    <string name="delete_tips">亲，确定要删除该记录吗？要三思哦~</string>
    <string name="delete_video_tips">亲，确定要删除该视频吗？要三思哦~</string>
    <string name="deleteTips">亲，确定要删除吗？要三思哦~</string>
    <string name="deleteCommentTips">亲，确定要删除该评论吗？要三思哦~</string>
    <string name="blackUserTips">拉黑该用户后，将自动取消对他的关注，并且无法互动！</string>
    <string name="deleteAlbumTips">确定要删除相册及其内容所有图片吗？</string>
    <string name="deleteVoteTips">是否确认删除该投票？</string>
    <string name="skipAdTips">开通VIP即刻享受永久无广告特权!</string>
    <string name="saveToPhone">保存图片到手机</string>
    <string name="savePic">保存图片</string>
    <string name="saveSuccess">保存成功</string>
    <string name="preservation">保存</string>
    <string name="attention">关注</string>
    <string name="movieAll">全部</string>
    <string name="allClassify">全部类型</string>
    <string name="movieLatestUpload">最新上传</string>
    <string name="movieLatelyUpdate">最近更新</string>
    <string name="movieHighPopularity">人气高</string>
    <string name="movieHighScore">评分高</string>
    <string name="search">搜索</string>
    <string name="searchNoData">没有找到相关内容</string>
    <string name="searchNoDataTips">我会努力跟上你的脚步</string>
    <string name="historySearch">历史搜索</string>
    <string name="recommended">推荐</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="other_function">其他功能</string>
    <string name="collection">收藏</string>
    <string name="report">举报</string>
    <string name="blacklist">拉黑</string>
    <string name="blacklist_remove">取消拉黑</string>
    <string name="not_interesting">不感兴趣</string>
    <string name="hotSearch">热搜</string>
    <string name="playNow">立即播放</string>
    <string name="SeeAll">查看全部</string>
    <string name="open">展开</string>
    <string name="clearHistoryWord">清空搜索历史</string>
    <string name="refresh_load">刷新重试</string>
    <string name="bullet_tip">弹幕走一波…</string>
    <string name="video_language">语言</string>
    <string name="video_speed">倍速</string>
    <string name="video_quality">清晰度</string>
    <string name="video_show">选集</string>
    <string name="each">·&#8194;%1$s更新</string>
    <string name="registerAccount">注册账号</string>
    <string name="phoneLogin">手机号快速登录</string>
    <string name="emailLogin">账号/邮箱登录</string>
    <string name="phoneNumber">手机号</string>
    <string name="phoneNumberSetting">手机号设置</string>
    <string name="phoneRegister">手机注册</string>
    <string name="accountNumber">账号</string>
    <string name="disableAccount">该账号不存在！</string>
    <string name="emailNumber">邮箱账号</string>
    <string name="emailRegister">邮箱注册</string>
    <string name="email">邮箱</string>
    <string name="emailSetting">邮箱设置</string>
    <string name="password">密码</string>
    <string name="passwordSetting">密码设置</string>
    <string name="verificationCode">验证码</string>
    <string name="invitationCode">邀请码</string>
    <string name="writeInvitationCode">您已提交过邀请码</string>
    <string name="invitationCodeTip">邀请码(选填)</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="area">地区</string>
    <string name="phoneNumbEditHint">请输入手机号</string>
    <string name="phoneNumbEditFriendHint">请输入好友手机号</string>
    <string name="emailEditFriendHint">请输入好友邮箱/账号</string>
    <string name="emailEditHint">请输入邮箱</string>
    <string name="bindEmailEditHint">请输入绑定的邮箱账号</string>
    <string name="passwordLoginEditHint">请输入登录密码</string>
    <string name="passwordEditHint">请输入密码</string>
    <string name="passwordEditNextHint">请再次输入密码</string>
    <string name="verificationCodeEditHint">请输入验证码</string>
    <string name="invitationCodeEditHint">请输入邀请码</string>
    <string name="login">登录</string>
    <string name="noLogin">未登录</string>
    <string name="loginOrRegister">登录/注册</string>
    <string name="goToRegister">没有账号？去注册</string>
    <string name="goToLogin">已有账号？去登录</string>
    <string name="userAgreementOne">登录/注册均表示</string>
    <string name="userAgreementTwo">您已阅读并同意</string>
    <string name="confidentialityAgreement">用户协议和隐私政策</string>
    <string name="and">和</string>
    <string name="settingPasswordAndName">设置密码及昵称</string>
    <string name="nick">昵称</string>
    <string name="settingPassword">设置密码</string>
    <string name="resetPassword">重置密码</string>
    <string name="rebuildPassword">重设密码</string>
    <string name="resetPasswordTips">密码由7-20位英文字母或数字组合，可纯数字，可纯字母</string>
    <string name="settingPasswordTips">注意：\n1、密码由7-20位英文字母或数字组合，可纯数字，可纯字母\n2、昵称不能是纯数字，且需要1-16个字符</string>
    <string name="settingNameTips">起个好听的名字吧 (16字之内)</string>
    <string name="finishRegister">完成注册</string>
    <string name="next">下一步</string>
    <string name="retrievePasswordType">选择一种方式找回密码</string>
    <string name="phoneRetrievePassword">通过手机号+短信验证码</string>
    <string name="emailRetrievePassword">通过绑定邮箱</string>
    <string name="retrievePassword">找回密码</string>
    <string name="confirm">确认</string>
    <string name="checkPhoneNumber">为了您的账户安全，需要验证您的手机号</string>
    <string name="checkEmailNumber">为了您的账户安全，需要验证您的邮箱</string>
    <string name="captchaTitleTips">请输入图形验证吗</string>
    <string name="clickRefresh">点击图片刷新</string>
    <string name="captchaTips">4位字母(不区分大小写)</string>
    <string name="areaTips">请选择号码地区</string>
    <string name="phoneTips">手机号为空</string>
    <string name="emailTips">邮箱为空</string>
    <string name="email_or_account_tips">邮箱/账号为空</string>
    <string name="emailTextTips">邮箱格式错误</string>
    <string name="passwordTips">密码为空</string>
    <string name="verificationCodeTips">验证码为空</string>
    <string name="getCodeTips">请先获取验证码</string>
    <string name="resetGetCode">重新获取验证码</string>
    <string name="passwordNotSame">两次密码输入不一致</string>
    <string name="nick_tips">昵称必须1-16个字符，且不能为纯数字</string>
    <string name="passwordEmptyTips">密码长度不能小于6位</string>
    <string name="second">%1$d秒</string>
    <string name="ad_buy_vip_tip">跳过广告</string>
    <string name="ad_to_detail">了解详情</string>
    <string name="vip_skip_ad">VIP已自动跳过广告</string>
    <string name="ad_start_tip">%1$d秒后播放广告</string>
    <string name="send">发送</string>
    <string name="replay">重新观看</string>
    <string name="shot_cut_success">截屏已保存</string>
    <string name="shot_cut_failed">截屏失败，请开启存储权限</string>
    <string name="net_failed">网络连接失败</string>
    <string name="net_failed_tip">快去检查一下网络吧</string>
    <string name="weibo">新浪微博</string>
    <string name="qq">QQ</string>
    <string name="fackbook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="copy">复制</string>
    <string name="briefIntroduction">简介</string>
    <string name="comment">评论</string>
    <string name="commentAndReply">评论/回复</string>
    <string name="barrageTakeWalk">弹幕走一波...</string>
    <string name="works">作品</string>
    <string name="followSuccess">关注成功</string>
    <string name="followed">已关注</string>
    <string name="details">详情</string>
    <string name="feed">反馈</string>
    <string name="download">下载</string>
    <string name="fabulous">赞</string>
    <string name="receivedFabulous">收到赞</string>
    <string name="unlike">不喜欢</string>
    <string name="relevant">相关内容</string>
    <string name="reply">回复</string>
    <string name="replied">回复了</string>
    <string name="recommendComment">以上为热门评论</string>
    <string name="replyTips">输入内容不能为空</string>
    <string name="moreRecommended">更多推荐</string>
    <string name="today_hot">今日热点</string>
    <string name="all_reply">展开%1$d条回复</string>
    <string name="fold">收起</string>
    <string name="replyCount">%1$d条回复</string>
    <string name="sayIt">我来说一说...</string>
    <string name="comment_warning">严重剧透、发布广告、木马链接、宣传同类网站、辱骂工作人员等将被封号！</string>
    <string name="picture_dynamic_warning">本平台禁止发布政治，广告，木马链接，非法信息，引导用户站外联系。以上行为将被封号！</string>
    <string name="commentDetail">评论详情</string>
    <string name="deleteComment">删除评论</string>
    <string name="blackUser">拉黑用户</string>
    <string name="confirmBlackUser">确认拉黑</string>
    <string name="delete_vote">删除投票</string>
    <string name="skipAdTitle">跳过广告将消耗%1$d金币</string>
    <string name="commentEmpty">空荡荡的</string>
    <string name="voteCountsTips">(最多5个）</string>
    <string name="sendVote">发起投票</string>
    <string name="vote_input_hint">投票标题，最多30个字~</string>
    <string name="type">类型</string>
    <string name="select_few">多选</string>
    <string name="select_single">单选</string>
    <string name="options">选项</string>
    <string name="add_option">增加选项</string>
    <string name="title">标题</string>
    <string name="shortVideoTitleHint">最多20个字～</string>
    <string name="shortVideoContextHint">请填写视频简介~</string>
    <string name="setFaceImage">设置封面</string>
    <string name="setFaceImageTips">(比例16:9)</string>
    <string name="selectFaceImage">选择封面</string>
    <string name="manualUpload">手动上传</string>
    <string name="classify">选择分类</string>
    <string name="tagsTips">(最多可选三个标签)</string>
    <string name="sureUpload">确定上传</string>
    <string name="feed_tip">为更加准确的解决您的问题，请正确填写~</string>
    <string name="local_area">所在地区</string>
    <string name="choose_area">请选择区域</string>
    <string name="net_info">上网环境</string>
    <string name="contact_email">联系邮箱</string>
    <string name="question_des">问题描述</string>
    <string name="upload_screen_cut">上传截图</string>
    <string name="contact_email_tip">请正确填写能联系到您的邮箱地址</string>
    <string name="input_question">请输入你的问题…</string>
    <string name="submit">提交</string>
    <string name="edit_question_tip">请详述问题，如果您的描述只有“视频无法播放”、“网站打不开”、“为什么不能登录”这种无信息量的文字，客服可能会直接忽略您的问题</string>
    <string name="option">（可选）</string>
    <string name="relocation">重新定位</string>
    <string name="album">相册</string>
    <string name="optional">(选填)</string>
    <string name="scan_qr">扫一扫</string>
</resources>