<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingTop="20dp"
        android:paddingRight="12dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_tip"
            android:textColor="@color/word_color_5"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_area"
                android:textColor="@color/word_color_2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@mipmap/icon_relocation"
                android:drawablePadding="10dp"
                android:onClick="startLocation"
                android:text="@string/relocation"
                android:textColor="@color/orange"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@mipmap/icon_grey_arrow"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/choose_area"
            android:onClick="selectArea"
            android:textColor="@color/word_color_2"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/net_info"
            android:textColor="@color/word_color_2"
            android:textSize="16sp" />

        <com.cqcsy.library.views.FlowLayout
            android:id="@+id/internetEnvironment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/question_des"
            android:textColor="@color/word_color_2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/edit_question_tip"
            android:textColor="@color/word_color_5"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/questionDesc"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape_solid_11"
            android:gravity="left|top"
            android:hint="@string/input_question"
            android:padding="10dp"
            android:textColor="@color/word_color_2"
            android:textColorHint="@color/word_color_11"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_screen_cut"
                android:textColor="@color/word_color_2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:textColor="@color/word_color_5"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:descendantFocusability="blocksDescendants">

            <com.cqcsy.library.views.LoadingRecyclerView
                android:id="@+id/imageSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/contact_email"
                android:textColor="@color/word_color_2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:textColor="@color/word_color_5"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/contact_email_tip"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/word_color_2"
            android:textColorHint="@color/word_color_11"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />

        <Button
            android:id="@+id/buttonSubmit"
            style="@style/button_style_normal"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:onClick="submitSuggestion"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>