<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginTipContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_tip"
        android:textColor="@color/word_color_3"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_sync_tip"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/loginButton"
        style="@style/button_style_play_now"
        android:layout_width="96dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="onLoginClick"
        android:text="@string/login_now" />
</LinearLayout>
